# tgeapcetscraper

./: pyproject.toml  scraper.py
cache/: AARM - AAR MAHAVEER ENGINEERING COLLEGE, BANDLAGUDA::COMPUTER SCIENCE AND ENGINEERING (ARTIFICIAL INTELLIGENCE AND MACHINE LEARNING).csv  AARM - AAR MAHAVEER ENGINEERING COLLEGE, BANDLAGUDA::COMPUTER SCIENCE AND ENGINEERING.csv  AARM - AAR MAHAVEER ENGINEERING COLLEGE, BANDLAGUDA::ELECTRICAL AND ELECTRONICS ENGINEERING.csv  AARM - AAR MAHAVEER ENGINEERING COLLEGE, BANDLAGUDA::ELECTRONICS AND COMMUNICATION ENGINEERING.csv  AARM - AAR MAHAVEER ENGINEERING COLLEGE, BANDLAGUDA::MECHANICAL ENGINEERING.csv  ACEG - A C E ENGINEERING COLLEGE (AUTONOMOUS), GHATKESAR::CIVIL ENGINEERING.csv  ACEG - A C E ENGINEERING COLLEGE (AUTONOMOUS), GHATKESAR::COMPUTER SCIENCE AND ENGINEERING (ARTIFICIAL INTELLIGENCE AND MACHINE LEARNING).csv  ACEG - A C E ENGINEERING COLLEGE (AUTONOMOUS), GHATKESAR::COMPUTER SCIENCE AND ENGINEERING (DATA SCIENCE).csv  ACEG - A C E ENGINEERING COLLEGE (AUTONOMOUS), GHATKESAR::COMPUTER SCIENCE AND ENGINEERING (IOT).csv  ACEG - A C E ENGINEERING COLLEGE (AUTONOMOUS), GHATKESAR::COMPUTER SCIENCE AND ENGINEERING.csv  ACEG - A C E ENGINEERING COLLEGE (AUTONOMOUS), GHATKESAR::ELECTRICAL AND ELECTRONICS ENGINEERING.csv  ACEG - A C E ENGINEERING COLLEGE (AUTONOMOUS), GHATKESAR::ELECTRONICS AND COMMUNICATION ENGINEERING.csv  ACEG - A C E ENGINEERING COLLEGE (AUTONOMOUS), GHATKESAR::INFORMATION TECHNOLOGY.csv  ACEG - A C E ENGINEERING COLLEGE (AUTONOMOUS), GHATKESAR::MECHANICAL ENGINEERING.csv  (+1029 more)
