[tool.poetry]
name = "tseapcetscraper"
version = "0.1.0"
description = ""
authors = ["Hemanth Nandipati <maaki@duck.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
selenium = "^4.23.0"
ipython = "^8.26.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
